cmake_minimum_required(VERSION 3.13)
project(CppBasic2)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CppBasic2 main.cpp)
#add_executable(CppBasic_09_01 src/d09_template/dm01_func.cpp)
#add_executable(CppBasic_09_02 src/d09_template/dm02_clazz.cpp)
#add_executable(CppBasic_10_01 src/d10_cast/dm01_simple_cast.cpp)
#add_executable(CppBasic_10_02 src/d10_cast/dm02_dynamic_cast.cpp)
#add_executable(CppBasic_10_03 src/d10_cast/dm03_const_cast.cpp)
#add_executable(CppBasic_11_01 src/d11_exception/dm01_basic_exception.cpp)
#add_executable(CppBasic_11_02 src/d11_exception/dm02_unwinding.cpp)
#add_executable(CppBasic_11_03 src/d11_exception/dm03_lifecycle.cpp)
#add_executable(CppBasic_11_04 src/d11_exception/dm04_test.cpp)
#add_executable(CppBasic_12_01 src/d12_file/dm01_io.cpp)
add_executable(CppBasic_12_02 src/d12_file/dm02_binary_file.cpp)